fixed nonresponsive design on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -289,7 +289,7 @@ a:after {
   }
 
   .primary-sponsors img {
-    max-width: 350px;
+    max-width: 250px;
   }
 
   .secondary-sponsors img {
